Cycles - Viewport "Renderend" ist not updated when a material is assigned to a face. #43398

Closed
opened 2015-01-24 15:00:31 +01:00 by Bernd Günther · 5 comments

System Information
Operating system and graphics card: Windows 8.1, AMD graphics card

Blender Version
2,73a:
Worked: 2.6x

Short description of error
When a marial is assigned to a single face, the viewport "Rendered" is not updated. The viewport ist updated when the user switches e.g. to the "Material viewport". This behavier ist only in the "Rendered" vieport present, not in the material vieport.

This ist not the problem with the latest blender version out of the 2.6. relase

Exact steps for others to reproduce the error
Open the attached .blend file. Set the left viewport to rendered. In the right viewport go to edit mode an select one face. Select and assign one material in different face color. Cycles starts the rerender process but ignores the new face color.

Switch to the maerial viewport and then back to the rendered. Everyhink is ok now.

It is not a problem in the material viewport.

face_assign_error.blend

**System Information** Operating system and graphics card: Windows 8.1, AMD graphics card **Blender Version** 2,73a: Worked: 2.6x **Short description of error** When a marial is assigned to a single face, the viewport "Rendered" is not updated. The viewport ist updated when the user switches e.g. to the "Material viewport". This behavier ist only in the "Rendered" vieport present, not in the material vieport. This ist not the problem with the latest blender version out of the 2.6. relase **Exact steps for others to reproduce the error** Open the attached .blend file. Set the left viewport to rendered. In the right viewport go to edit mode an select one face. Select and assign one material in different face color. Cycles starts the rerender process but ignores the new face color. Switch to the maerial viewport and then back to the rendered. Everyhink is ok now. It is not a problem in the material viewport. [face_assign_error.blend](https://archive.blender.org/developer/F139141/face_assign_error.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bguenthe

Added subscriber: @bguenthe
Bastien Montagne changed title from Viewport "Renderend" ist not updated when a material is assigned to a face. to Cycles - Viewport "Renderend" ist not updated when a material is assigned to a face. 2015-01-24 16:39:29 +01:00

This issue was referenced by 9aefe08711

This issue was referenced by 9aefe0871115bba491638fa53ab11226d5b24a64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9aefe08711.

Closed by commit 9aefe08711.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43398
No description provided.